correcion sobre:
 CategoriaController,